Stories sections elements background color fix for a contrast to the video.

--- a/stylesheet/scss/components/_story.scss
+++ b/stylesheet/scss/components/_story.scss
@@ -1,5 +1,5 @@
 .story {
-  background-color: var(--color-white);
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 3px;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
   font-size: var(--default-font-size);
